--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/burger.html">Smash Burger</a>
+    <ul>
+        <li><a href="recipes/burger.html">Smash Burger</a></li>
+        <li><a href="recipes/tacos.html">Recipe Title 2</a></li>
+        <li><a href="recipes/chipotle_chicken.html">Recipe Title 3</a></li>
+      </ul>
 </body>
 </html>
