--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/burger.html">Smash Burger</a></li>
-        <li><a href="recipes/tacos.html">Recipe Title 2</a></li>
-        <li><a href="recipes/chipotle_chicken.html">Recipe Title 3</a></li>
+        <li><a href="recipes/tacos.html">Double Decker Tacos</a></li>
+        <li><a href="recipes/chipotle_chicken.html">Copycat Chipotle Chicken</a></li>
       </ul>
 </body>
 </html>
