colors and gifs

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Schmackin' Recipes</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
+        <img src="/img/cooking.gif" alt="Dramatically seasoning food in kitchen"/>
         <li><a href="recipes/burger.html">Smash Burger</a></li>
         <li><a href="recipes/tacos.html">Double Decker Tacos</a></li>
         <li><a href="recipes/chipotle_chicken.html">Copycat Chipotle Chicken</a></li>
