--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -1,4 +1,12 @@
-<h1>Smash Burger</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Smash Burger</h1>
 <img src="../img/burger.webp" alt="Juicy Smash Burger with cheese">
 <h2>Description</h2>
 <p>This smash burger recipe makes super juicy burgers with crispy edges. Don't use meat that is leaner than 80/20 for best results, and make sure the meat is very cold. I prefer to cook these outdoors to avoid smoking up the kitchen. These grill up very fast because of the high heat, so make sure you have everything ready to go!</p>
@@ -31,3 +39,5 @@
     <li>You can make 4 (4 ounce) patties instead of 8 (2 ounce patties), but I prefer the thinner patties that have more crispy surface area.</li>
     <li>I buy American cheese freshly-sliced from the deli, but individually-wrapped slices will work too.</li>
 </ul>
+</body>
+</html>
