--- a/recipes/chipotle_chicken.html
+++ b/recipes/chipotle_chicken.html
@@ -1,4 +1,12 @@
-<h1>Copycat Chipotle Chicken</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Copycat Chipotle Chicken</h1>
 <img src="../img/chipotle_chicken.webp" alt="shredded Grilled chicken ">
 <h2>Description</h2>
 <p>This chipotle chicken recipe requires just a small amount of effort for a delicious and healthy meal. You can use this chicken for tacos, burritos, bowls, or fajitas. Just add your favorite toppings such as lettuce, salsa, rice, beans, cheese, or sour cream. Enjoy!</p>
@@ -28,3 +36,5 @@
 </ol>
 <h3>Tips</h3>
 <p>If you do not have an indoor electric grill, wrap a paver brick in aluminum foil and place it on top of the chicken to keep it flat while cooking on an outdoor grill.Soak chile peppers in chicken broth instead of water, if desired.</p>
+</body>
+</html>
