working external backgrounds and texts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Schmackin' Recipes</title>
     <link rel="stylesheet" href="style.css"/>
 </head>
-<body>
+<body class="bg">
     <h1>Odin Recipes</h1>
     <ul>
         <img src="/img/cooking.gif" alt="Dramatically seasoning food in kitchen"/>
