--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css"/>
 </head>
-<body>
+<body class="bg">
     <h1>Smash Burger</h1>
 <img src="../img/burger.webp" alt="Juicy Smash Burger with cheese">
-<h2>Description</h2>
+<h2 class="subheadings">Description</h2>
 <p>This smash burger recipe makes super juicy burgers with crispy edges. Don't use meat that is leaner than 80/20 for best results, and make sure the meat is very cold. I prefer to cook these outdoors to avoid smoking up the kitchen. These grill up very fast because of the high heat, so make sure you have everything ready to go!</p>
-<h2>Ingredients</h2>
+<h2 class="subheadings">Ingredients</h2>
 <ul>
     <li>4 hamburger buns</li>
     <li>2 tablespoons butter, softened, or as needed</li>
@@ -20,7 +21,7 @@
     <li>4 slices American Cheese</li>
     <li>burger toppings of choice</li>
 </ul>
-<h2>Steps</h2>
+<h2 class="subheadings">Steps</h2>
 <ol>
     <li>Preheat an outdoor grill for high heat and lightly oil the grate. Set a cast iron flat-top griddle or large cast iron skillet onto the grill and preheat until smoking.</li>
     <li>Spread butter on the inside of the buns and toast on the flat-top until lightly browned. Set aside.
@@ -33,7 +34,7 @@
 
     </li>
 </ol>
-<h3>Tips</h3>
+<h3 class="subheadings">Tips</h3>
 <ul>
     <li>If you only have one spatula, wrap your other hand in an old dish towel for protection, and use it to press down on the spatula with both hands.</li>
     <li>You can make 4 (4 ounce) patties instead of 8 (2 ounce patties), but I prefer the thinner patties that have more crispy surface area.</li>
