--- a/recipes/chipotle_chicken.html
+++ b/recipes/chipotle_chicken.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css"/>
 </head>
-<body>
-    <h1>Copycat Chipotle Chicken</h1>
+<body class="bg">
+    <h1 >Copycat Chipotle Chicken</h1>
 <img src="../img/chipotle_chicken.webp" alt="shredded Grilled chicken ">
-<h2>Description</h2>
+<h2 class="subheadings">Description</h2>
 <p>This chipotle chicken recipe requires just a small amount of effort for a delicious and healthy meal. You can use this chicken for tacos, burritos, bowls, or fajitas. Just add your favorite toppings such as lettuce, salsa, rice, beans, cheese, or sour cream. Enjoy!</p>
 <h2>Ingredients</h2>
 <ul>
@@ -24,7 +25,7 @@
     <li>2 tablespoons olive oil</li>
     <li>2 ½ pounds skinless, boneless chicken thighs</li>
 </ul>
-<h2>Steps</h2>
+<h2 class="subheadings">Steps</h2>
 <ol>
     <li>Place chipotle and ancho chile peppers in a shallow bowl; pour in water. Cover the bowl and let sit at room temperature until peppers are softened, 10 to 12 hours. Drain water and remove seeds from peppers.</li>
     <li>Blend chile peppers, red onion, garlic, sea salt, cumin, oregano, and black pepper in a blender until a coarse paste forms; add olive oil and blend until marinade is smooth.</li>
@@ -34,7 +35,7 @@
     <li>Remove chicken from the bag and discard marinade.</li>
     <li>Place chicken on the preheated grill, close the lid, and cook until no longer pink in the center and the juices run clear, 5 to 7 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C). Cut chicken into strips and serve warm.</li>
 </ol>
-<h3>Tips</h3>
+<h3 class="subheadings">Tips</h3>
 <p>If you do not have an indoor electric grill, wrap a paver brick in aluminum foil and place it on top of the chicken to keep it flat while cooking on an outdoor grill.Soak chile peppers in chicken broth instead of water, if desired.</p>
 </body>
 </html>
