--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css"/>
 </head>
-<body>
+<body class="bg">
     <h1>Double Decker Tacos</h1>
 <img src="../img/ddtacos.webp" alt="Tacos with 2 shells">
-<h2>Description</h2>
+<h2 class="subheadings">Description</h2>
 <p>The best tacos! A soft shell taco is layered with refried beans, then wrapped around a hard shell taco, which is filled with seasoned ground beef and topped with cheese, lettuce, tomato, onion, sour cream and fresh guacamole. You can top it with whatever you like, but I recommend loading it up! Also, if you don't eat meat, put melted cheese on the soft shell, and the refried beans in the hard.</p>
-<h2>Ingredients</h2>
+<h2 class="subheadings">Ingredients</h2>
 <ul>
     <li>1 pound ground beef</li>
     <li>1 (1 ounce) packet taco seasoning mix, divided</li>
@@ -28,7 +29,7 @@
     <li>¼ red onion, chopped</li>
     <li>½ cup sour cream</li>
 </ul>
-<h2>Steps</h2>
+<h2 class="subheadings">Steps</h2>
 <ol>
     <li>Place the ground beef in a skillet over medium heat, and sprinkle about 3/4 of the packet of taco seasoning over the meat. Cook and stir the ground beef, breaking it up as it cooks, until the beef is browned and crumbly, 10 to 15 minutes. Drain the excess grease.</li>
     <li>Mash the refried beans with the water in a small saucepan, and sprinkle with the rest of the seasoning packet. Heat the refried beans over low heat until simmering.</li>
