--- a/recipes/chipotle_chicken.html
+++ b/recipes/chipotle_chicken.html
@@ -11,7 +11,7 @@
 <img src="../img/chipotle_chicken.webp" alt="shredded Grilled chicken ">
 <h2 class="subheadings">Description</h2>
 <p>This chipotle chicken recipe requires just a small amount of effort for a delicious and healthy meal. You can use this chicken for tacos, burritos, bowls, or fajitas. Just add your favorite toppings such as lettuce, salsa, rice, beans, cheese, or sour cream. Enjoy!</p>
-<h2>Ingredients</h2>
+<h2 class="subheadings">Ingredients</h2>
 <ul>
     <li>1 ounce dried chipotle chile pepper</li>
     <li>1 ounce dried ancho chile pepper</li>
